# nwtk

./: LICENCE  LICENSE  README.md  _activation.py  _core.py  _manipulate.py  _nodeinfo.py  _rbf_basis.py  config.py  convposenc.py  downsample.py  drop.py  helpers.py  lortzen.py  mlp.py  pyproject.toml  utils.py
.github/workflows/: publish.yml  pyproject.toml
nwtk/: __init__.py  _edgeinfo.py  _embedding.py  attention.py  graph.py  mlp.py  norm.py
tests/: test_chattn.py
