[build-system]
requires = ["hatchling>=1.18.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nwtk"        
version = "0.1.0"
description = "Your project description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="zeb", email="zebscg@gmail.com" }
]
license = { file="LICENSE" }
keywords = ["python", "example", "nwtk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "torch>=2.1.2",
  "numpy>=1.25",
]
[project.optional-dependencies]
full = [
    "dgl>=2.1.0",
]

test = [
    "pytest>=6.0",
]
[tool.hatch.build.targets.sdist]
exclude = [
  "/.*",
]

[tool.hatch.build.target.wheel]
packages = [
  "nwtk"
]
[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "nwtk/_version.py"

[project.urls]
Homepage = "https://github.com/xia0WT/nwtk"
Repository = "https://github.com/xia0WT/nwtk"
